Replacing getFirst() with get(0)